--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "@nuxtjs/vuetify": "0.5.5",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
-    "nuxt": "^2.0.0"
+    "@nuxtjs/vuetify": "0.5.5",
+    "cross-env": "^5.2.0",
+    "eslint": "^6.0.1",
+    "express": "^4.16.4",
+    "jQuery": "^1.7.4",
+    "jsdom": "^15.1.1",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "vuetify-loader": "^1.2.2"
   },
   "devDependencies": {
     "stylus": "^0.54.5",
