--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "0.5.5",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "eslint": "^6.0.1",
     "express": "^4.16.4",
     "node-sass": "^4.12.0",
     "nuxt": "^2.0.0",
+    "redirect-ssl": "^1.4.1",
     "sass-loader": "^7.1.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
