--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "red4-playground",
+  "name": "red4-l",
   "version": "1.0.0",
   "description": "",
   "author": "Red",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development NUXT_HOST=0.0.0.0 nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
