--- a/package.json
+++ b/package.json
@@ -7,33 +7,33 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development NUXT_HOST=0.0.0.0 nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt build && cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/vuetify": "0.5.5",
+    "@nuxtjs/vuetify": "1.9.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.0.1",
-    "express": "^4.16.4",
-    "node-sass": "^4.12.0",
-    "nuxt": "^2.0.0",
+    "cross-env": "^6.0.3",
+    "eslint": "^6.6.0",
+    "express": "^4.17.1",
+    "node-sass": "^4.13.0",
+    "nuxt": "^2.10.2",
     "redirect-ssl": "^1.4.1",
-    "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "vuetify-loader": "^1.2.2"
+    "sass-loader": "^8.0.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
-    "stylus": "^0.54.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
-    "nodemon": "^1.18.9"
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2",
+    "nodemon": "^1.19.4"
   }
 }
